fix css bug of wiewport scrollbar on register and login component

--- a/src/Components/Dashboard/Components/Dashboard/dashboard.scss
+++ b/src/Components/Dashboard/Components/Dashboard/dashboard.scss
@@ -1,12 +1,10 @@
 .dashboard {
-    height: 100vh;
     width: 90%;
     background-color: red;
     justify-content: center;
     margin: auto;
 
     .dashboardContainer {
-        height: 100vh;
         width: 100%;
         border-radius: 10px;
         overflow: hidden;
